# docs/swagger.json
@@ -1545,8 +1545,11 @@
         "entities.FightStart": {
             "type": "object",
             "properties": {
-                "pupa": {
-                    "type": "integer"
+                "answer_id": {
+                    "type": "array",
+                    "items": {
+                        "type": "boolean"
+                    }
                 }
             }
         },
